@@ -1,7 +1,9 @@
 
-SUBDIRS = src man
+SUBDIRS = po src man
 
 dist_pkgdata_DATA = join-duplicates.sh
 
-EXTRA_DIST = HACKING README.SHA
+EXTRA_DIST = config.rpath m4/ChangeLog HACKING README.SHA
+
+ACLOCAL_AMFLAGS = -I m4
 
