@@ -1,4 +1,6 @@
 
+AM_CPPFLAGS = -I../lib
+
 bin_PROGRAMS = duff
 
 duff_SOURCES = duff.c duffdriver.c duffentry.c duffstring.c duffutil.c sha1.c sha256.c sha384.c sha512.c
