@@ -134,7 +134,7 @@ size_t get_digest_size(void)
     case SHA_512:
       return SHA512_HASH_SIZE;
     default:
-      error(gettext("This cannot happen"));
+      error(_("This cannot happen"));
   }
 }
 
