@@ -1,0 +1,11 @@
+2011-04-10  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* gettext.m4: New file, from gettext-0.18.1.
+	* iconv.m4: New file, from gettext-0.18.1.
+	* lib-ld.m4: New file, from gettext-0.18.1.
+	* lib-link.m4: New file, from gettext-0.18.1.
+	* lib-prefix.m4: New file, from gettext-0.18.1.
+	* nls.m4: New file, from gettext-0.18.1.
+	* po.m4: New file, from gettext-0.18.1.
+	* progtest.m4: New file, from gettext-0.18.1.
+
